1. Added backtest settings schema. 2. Changed variable name from backtest_id to backtestId for variable consistency between UI and BE. 3.  Added most recent realtime data (new format)
